<resources>
    <string name="app_name">EBuzz</string>
    <string name="profile_type">Profile Type</string>
    <string name="profile_category">Profile Category</string>
    <string name="about_me">About Me</string>
    <string name="activity_aboutme_description">Here you can change your current Bio that will be visible to all other users.</string>
    <string name="about_me_textbox_hint">Tell others about yourself.</string>
    <string name="update_bio">Update Bio</string>
    <string name="back_button">Go Back</string>
    <string name="add_now">Add Now</string>
    <string name="activity_add_description">Here you can share content in the form of text, photos/videos OR create your very own public page or group.</string>
    <string name="upload_post">Upload Post</string>
    <string name="create_my_page">Create my Page</string>
    <string name="create_my_group">Create my Group</string>
    <string name="username">Username</string>
    <string name="caller_image">Caller Image</string>
    <string name="timer_string">00:00</string>
    <string name="receiver_image">Receiver Image</string>
    <string name="mute_button">Mute Option</string>
    <string name="speaker_button">Speaker Option</string>
    <string name="cancel_call_button">Cancel Call Option</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_activity_decription">Verify your email address and create a new password for your account.</string>
    <string name="verify_email">Verify Email :</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="current_password">Current Password :</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="new_password">New Password :</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="messaging">Messaging</string>
    <string name="messaging_activity_description">Interact with other to enjoy the full Social Experience.</string>
    <string name="search">Search</string>
    <string name="icon">Icon</string>
    <string name="search_button">Search</string>
    <string name="create_group">Create Group</string>
    <string name="create_group_activity_description">Create your own public group to interact and share content with people form all around the world.</string>
    <string name="group_name">Group Name :</string>
    <string name="enter_your_group_name">Enter your group name</string>
    <string name="group_type">Group Type :</string>
    <string name="enter_your_group_description">Enter your group description</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="create_page">Create Page</string>
    <string name="create_page_activity_description">Create your own public page to interact and share content with people form all around the world.</string>
    <string name="page_name">Page Name :</string>
    <string name="enter_your_page_name">Enter your page name</string>
    <string name="page_type">Page Type :</string>
    <string name="enter_you_page_description">Enter you page description</string>
    <string name="user_image">User Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_hint">01234567890</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter Your age</string>
    <string name="update_profile">Update Profile</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="feedback_activity_description">Provide us with your feedback to help us get better at what we do.</string>
    <string name="email">Email :</string>
    <string name="tell_us_about_your_experience">Tell us about your experience</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_activity_description">Here you can delete your account to get yourself removed form this platform.</string>
    <string name="verify_password">Verify Password :</string>
    <string name="enter_password">Enter Password</string>
    <string name="delete_page">Delete Page</string>
    <string name="delete_page_activity_description">Here you can delete your page to remove your page from this platform.</string>
    <string name="press_to_call">Press to Call</string>
    <string name="close_friend">Close Friend</string>
    <string name="view_more">View More</string>
    <string name="groupname">Groupname</string>
    <string name="_view_more_">View More</string>
    <string name="leave_group">Leave Group</string>
    <string name="notification_text">You have received one new notification.</string>
    <string name="remove_notification">Remove notification</string>
    <string name="pagename">Pagename</string>
    <string name="follow">Follow</string>
    <string name="post_description">This is the description of this post</string>
    <string name="comments">Comments</string>
    <string name="send_post">Send Post</string>
    <string name="like_post">Like Post</string>
    <string name="post_text_message">This is my Text Status And I am writting here for you to read this and I hope you are having a good time. Thank You.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="public_text">Public</string>
    <string name="like_comment">Like Comment</string>
    <string name="comment_text">This is a comment made by a user by the name of username.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_activity_description">Don’t worry! It happens. Please enter your email to reset your password.</string>
    <string name="send">Send</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="login">Login</string>
    <string name="my_friends_list">My Friends List</string>
    <string name="open_camera">Open Camera</string>
    <string name="message">Message</string>
    <string name="record_audio">Record Audio</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="send_message">Send Message</string>
    <string name="groups">Groups</string>
    <string name="groups_activity_description">Interact with other public communities to share your thoughts worldwide.</string>
    <string name="hello">"Hello, "</string>
    <string name="guest">Guest</string>
    <string name="homepage_greeting_message">We hope you like our new app, Team@Ebuzz</string>
    <string name="notifications">Notifications</string>
    <string name="requests">Requests</string>
    <string name="pages">Pages</string>
    <string name="chats">Chats</string>
    <string name="homepage">Homepage</string>
    <string name="my_profile">My Profile</string>
    <string name="add_post">Add Post</string>
    <string name="guest_login">Guest Login!</string>
    <string name="guest_login_activity_description">We only require your name to sign you in.</string>
    <string name="get_in">Get In</string>
    <string name="i_want_to_create_an_account">I want to create an account?</string>
    <string name="log_in">Log in</string>
    <string name="guest_profile">Guest Profile</string>
    <string name="log_out">Log Out</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="guest_name">Guest Name</string>
    <string name="settings">Settings</string>
    <string name="about_me_">About Me:</string>
    <string name="about_me_description">This is my about section</string>
    <string name="user">User</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="send_now">Send Now</string>
    <string name="repost">Repost</string>
    <string name="login_menu">LogIn Menu</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login_">LogIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="camera_off">Camera off</string>
    <string name="user_profile">User Profile</string>
    <string name="unfriend">Unfriend</string>
    <string name="message_button">Message Button</string>
    <string name="send_request">Send Request</string>
    <string name="city_icon">City Icon</string>
    <string name="city">City</string>
    <string name="select_catergory">Select Catergory</string>
    <string name="post">Post</string>
    <string name="type_here">Type Here...</string>
    <string name="upload_now">Upload Now</string>
    <string name="get_started">Get Started!</string>
    <string name="password_length_limit_text">Password must be at least 8 characters long</string>
    <string name="confirm_your_password">Confirm Your password</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="personal_info">Personal Info!</string>
    <string name="report_problem">Report Problem</string>
    <string name="report_problem_activity_description">Let us know if you are having any issues regarding your account.</string>
    <string name="issue_regarding">Issue Regarding :</string>
    <string name="select_problem">Select Problem</string>
    <string name="report">Report</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friend_requests_activity_description">Explore the people around you that want to connect with you.</string>
    <string name="search1_activity_description">Choose a category to search for what you are looking for.</string>
    <string name="find_friends">Find Friends</string>
    <string name="search_for_groups">Search for Groups</string>
    <string name="search_for_pages">Search for Pages</string>
    <string name="sreach2_activity_description">Search here to start socializing and look for your favourite creators</string>
    <string name="settings_activity_description">Here you can make changes to your account\'s settings</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="submit_your_feedback">Submit your Feedback</string>
    <string name="deactivate_your_account">Deactivate your Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="verification">Verification?</string>
    <string name="verification_activity_description">We have sent you an OTP verification code on your email address.</string>
    <string name="confirm">Confirm</string>
    <string name="send_code_again">Send code again</string>
    <string name="bell_icon">Bell Icon</string>
    <string name="notifications_activity_description">Here you can view your interactions with other people.</string>
    <string name="pages_activity_description">View Public Pages around you to share content all around you.</string>
    <string name="my_page">My Page</string>
    <string name="page_description">Page Description:</string>
    <string name="page_description_text">This is the description of this public page</string>
    <string name="public_page">Public Page</string>
    <string name="follow_up">Follow Up</string>
    <string name="leave_page">Leave Page</string>
    <string name="people_icon">People Icon</string>
    <string name="people">People</string>
    <string name="discover">Discover</string>
    <string name="groups_icon">Groups Icon</string>
</resources>