<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/guestprofile_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/guestprofile_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@+id/guestprofile_logout_btn"
            android:layout_toEndOf="@+id/guestprofile_back_btn"
            android:text="@string/guest_profile"
            android:textColor="@color/bright_black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/guestprofile_logout_btn"
            android:layout_width="86dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/dark_yellow"
            android:padding="0dp"
            android:text="@string/log_out"
            android:textColor="@color/bright_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:layout_marginTop="4dp">

        <ImageView
            android:id="@+id/guestprofile_cover_img"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@color/dark_yellow"
            android:contentDescription="@string/cover_photo"
            android:scaleType="centerCrop">

        </ImageView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="44dp">

                <ImageView
                    android:id="@+id/guestprofile_user_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/user_image"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/guestprofile_username_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/guest_name"
                android:textColor="@color/bright_black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/guestprofile_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/bright_black"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:cornerRadius="6dp" />

                <Button
                    android:id="@+id/guestprofile_aboutme_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/dark_yellow"
                    android:text="@string/about_me"
                    android:textColor="@color/bright_black"
                    android:textSize="14sp"
                    app:cornerRadius="6dp" />

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me_"
            android:textColor="@color/bright_black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/guestprofile_aboutme_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxHeight="62dp"
            android:text="@string/about_me_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:text="This feature is not available in\nGuest Mode."
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>