<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-28dp"
        android:backgroundTint="@color/dark_yellow"
        app:cardCornerRadius="34dp"
        app:cardElevation="0dp">

        <ImageButton
            android:id="@+id/editprofile_back_btn"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:backgroundTint="@android:color/transparent"
                    app:cardCornerRadius="60dp">

                    <ImageView
                        android:id="@+id/editprofile_user_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:contentDescription="@string/user_image"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textColor="@color/bright_black"
                    android:layout_marginBottom="30dp"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/editprofile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editprofile_name_txt"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/textbox_round_yellow"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:text="@string/contact_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editprofile_contact_txt"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/textbox_round_yellow"
                android:hint="@string/contact_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/editprofile_country_spinner"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/textbox_round_yellow"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:text="@string/province"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/editprofile_province_spinner"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/textbox_round_yellow"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/editprofile_age_txt"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/textbox_round_yellow"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="12dp"
                android:paddingTop="4dp"
                android:paddingEnd="12dp"
                android:text="@string/enter_your_age"
                android:textColor="@color/hint_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/editprofile_upload_btn"
                android:layout_width="220dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/dark_yellow"
                android:text="@string/update_profile"
                android:textColor="@color/bright_black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>